<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicalstructureapp.PlaylistDetailsActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#E3F2FD"
        android:orientation="vertical"
        android:id="@+id/eng_playlist">

        <TextView
            style="@style/playlist_Details"
            android:text="@string/song_1" />

        <TextView
            style="@style/playlist_Details"
            android:text="@string/song_9" />

        <TextView
            style="@style/playlist_Details"
            android:text="@string/song_10" />
    </LinearLayout>
</ScrollView>